# HRL_MAML_StockTrading

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: best_hyperparams.yaml  defaults.yaml
demo/: eval.ipynb  test_demo.ipynb  test_demo_HRL.ipynb  test_demo_HRL.py  test_demo_HRLbase.ipynb  test_demo_RLbase.ipynb  test_demo_metaHRL.py
demo/demo_hrl/: test_demo_hrl.ipynb  test_demo_hrl.py
demo/demo_metahrl/: test_demo_metahrl.ipynb  test_demo_metahrl.py
demo/demo_new_hrl/: test_demo_new_hrl.py  visualization.ipynb
demo/demo_new_hrl/results/20260505_200000/: cuenta_test_(2023-2024)_HRL_new.csv  (+2 more)
demo/demo_rl_base/: test_demo_rl_base.ipynb
dev/hyperparameter_searching/: HRL_hp_opt.py  HRL_utils.py  base_RL_hs.py
finHRL/: config.py
finHRL/agent/: hrt.py  models.py
finHRL/env_stocktrading/: trading_env_HRL.py  trading_env_finrl.py
finHRL/preprocess/: preprocessor.py  yahoodownloader.py
src/: config_training.py
src/agent/: HRL_model.py  HRL_model_SB3.py  PPO.py  base_RL_models.py  hrt.py  metaHRL_model.py  metaHRL_reptile.py  meta_hrl_reptile.py  train_example_PPO.py
src/agent/meta/: task_config.py
src/env_stocktrading/: trading_env_HRL-OLD.py  trading_env_HRL.py  trading_env_RL.py
src/eval/: benchmarks.py  evaluate_functions.py
src/hpopt/: base_rl_hyperparam_op.py  hrl_hp_opt.py  hrl_optuna_utils.py
src/hyperparameter_searching/: HRL_hp_opt.py  HRL_optuna_utils.py  base_RL_hyperparam_op.py
src/preprocess/: preprocessor.py
src/preprocess/tickers/: ticker_lists.json
tests/: smoke_phase2.py
(+4 files in other folders)
