[project]
name = "hrl-maml-stocktrading"
version = "0.1.0"
description = "Hierarchical RL + Meta-Learning (Reptile) for Stock Trading – Master's Thesis"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]

dependencies = [
    "gymnasium>=1.0",
    "stable-baselines3>=2.4",
    "torch>=2.2",
    "numpy>=1.26,<2.4",
    "pandas>=2.2",
    "matplotlib>=3.10",
    "scikit-learn>=1.6",
    "optuna>=4.3",
    "yfinance>=0.2.60",
    "stockstats",
    "tensorboard>=2.15",
    "PyYAML>=6.0",
    "tqdm>=4.60",
]

[project.optional-dependencies]
notebooks = [
    "jupyter",
    "ipykernel",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["src*"]
